--- a/index-2.html
+++ b/index-2.html
@@ -6,6 +6,7 @@
     <title>My First Github Repo_2</title>
 </head>
 <body>
-    
+    <h1>I will regularly push to github</h1>
+    <p>I will be a web developer</p>
 </body>
 </html>
