--- a/index-2.html
+++ b/index-2.html
@@ -8,5 +8,6 @@
 <body>
     <h1>I will regularly push to github</h1>
     <p>I will be a web developer</p>
+    <h3>New code coming soon</h3>
 </body>
 </html>
